FrameMetrics: Track the skipped frame rate during scrolling event only

Skipped Frame tracker used to record every frame produced at all times.
With that approach, it's hard to study the correlation between the user
actions and the skipped frame rate. In this patch, we only track the
skipped frame rate during scrolling events. More user actions will be
added in the future cls.

Design doc on skipped frame tracker:
https://docs.google.com/document/d/1SqqdQsdh9CA5SRHCvkI_FDcc-vBW-saEj1kh4-qTBwg

Videos on how it used to work:
https://drive.google.com/open?id=1S5fnq8VrqvUIYFZjvIi4GNA3ekIdggG0

Bug: 894149

Change-Id: I02441cb5c9f551cc80b51ea1dcbafa3c492cb5ce
Reviewed-on: https://chromium-review.googlesource.com/c/1334103
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Yi Xu <yiyix@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607861}
Former-commit-id: 08e71a98c5f020c4af56d2a092512bb87742c1db